Bug 40304 - FILEOPEN data from broken XLS generator - the CPU races to 100% usage
Summary: FILEOPEN data from broken XLS generator - the CPU races to 100% usage
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.5 target:5.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-23 05:01 UTC by yds
Modified: 2016-10-25 19:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
example (4.00 KB, application/vnd.ms-excel)
2011-08-23 05:01 UTC, yds
Details

Note You need to log in before you can comment on or make changes to this bug.
Description yds 2011-08-23 05:01:38 UTC
Created attachment 50483 [details]
example

------- Comment #5 From dr@openoffice.org 2010-12-16 11:56:51 -------

... The SHEET record of the first sheet does not point to the BOF record of the related sheet substream, but to the first record following.

http://openoffice.org/bugzilla/show_bug.cgi?id=109800
Comment 1 Markus Mohrhard 2011-08-23 20:20:11 UTC
should be fixed in master with the integration of m106

I mark it as resolved, please retest with 3.5 or a daily build as soon as possible and open this bug report if it is not fixed

http://cgit.freedesktop.org/libreoffice/calc/commit/?h=integration/dev300_m106&id=340bea2639e78081b9115a6077ea9d269061d983
http://cgit.freedesktop.org/libreoffice/calc/commit/?h=integration/dev300_m106&id=dddebac86dd6b1608bb59479e672c69ef3a48e0e
Comment 2 Markus Mohrhard 2011-11-17 14:46:38 UTC
does not seem to be really fixed, at least filters-test runs into a infinite loop with this document

I added it to the documents that need further investigation
Comment 3 yds 2011-11-17 23:15:53 UTC
fix really worked with OOo-Dev_3.4beta_20110411_Win_x86_...
Comment 4 Kohei Yoshida 2011-11-22 06:26:45 UTC
Re-opening it.
Comment 5 Kohei Yoshida 2011-11-22 06:27:27 UTC
BTW, who generates these xls documents?  I hope it's not 1C, is it?
Comment 6 Kohei Yoshida 2011-11-22 06:32:01 UTC
I'll take this.
Comment 7 Kohei Yoshida 2011-11-22 06:32:49 UTC
BTW this is not really our bug; whoever generates these broken xls should fix their filter.
Comment 9 yds 2011-11-22 21:58:02 UTC
(In reply to comment #5)
> BTW, who generates these xls documents?  I hope it's not 1C, is it?
No, others - http://olimp.udm.ru/
Comment 10 yds 2011-11-22 22:01:12 UTC
(In reply to comment #7)
> BTW this is not really our bug; whoever generates these broken xls should fix
> their filter.

Thanks a lot!
Comment 11 Commit Notification 2015-10-01 12:54:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0cc41a033f74891ac9b47f0d1c0b291f8341a2a1

Related: tdf#40304 extend biff-5 invalid xls loop detection

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.