fdo#40304: Check if BOUNDSHEET points to valid BOF record.

Some (presumably Russian) 3rd party programs generate invalid xls docs
that have BOUNDSHEET record pointing to invalid BOF record position.
The real BOF position may be before or after the record pointed to by
the BOUNDSHEET.

So, let's check if the BOUNDSHEET points to a valid BOF, and if not,
manually search for one from the BOUNDSHEET record position.